[gd_scene load_steps=2 format=3]

[ext_resource path="res://scenes/ui/QuestLogMenu.gd" type="Script" id=1]

[node name="QuestLogMenu" type="Control"]
script = ExtResource( 1 )

[node name="ActiveQuests" type="ItemList" parent="."]
[node name="CompletedQuests" type="ItemList" parent="."]
[node name="CloseButton" type="Button" parent="."]
text = "Close"
